--- a/src/components/skills.module.css
+++ b/src/components/skills.module.css
@@ -180,7 +180,6 @@
     margin: 0;
   }
   .tooltip {
-    left: 0;
-    width: 120%;
+    display: none;
   }
 }
